<resources>
    <string name="app_name">RiotAPIProject</string>
    <string name="lol_version">11.24.1</string>
    <string name="lol_region">KR</string>
    <string name="error_occur">에러가 발생했습니다.</string>

    <!-- Splash -->
    <string name="splash_loading">로딩 중입니다.</string>

    <!-- URL -->
    <string name="png">png</string>
    <string name="jpg">jpg</string>
    <string name="profile_icon_url_front">http://ddragon.leagueoflegends.com/cdn/</string>
    <string name="profile_icon_url_back">/img/profileicon/</string>
    <string name="champion_icon_url_front">http://ddragon.leagueoflegends.com/cdn/</string>
    <string name="champion_icon_url_back">/img/champion/</string>
    <string name="champion_loading_image_url">http://ddragon.leagueoflegends.com/cdn/img/champion/loading/</string>

    <!-- Main -->
    <string name="navigation_menu">메뉴</string>
    <string name="ready_job">준비 중인 기능입니다.</string>
    <string name="input_searching_summoner_name">검색할 소환사명을 입력하세요.</string>
    <string name="rotation_info">이번 주 로테이션</string>
    <string name="solo_rank_ranking">솔로랭크 랭킹 (챌린저 TOP 10)</string>
    <string name="network_error">네트워크 에러로 불러오지 못했습니다.</string>

    <!-- Champion Info -->
    <string name="champion_introduce">챔피언 소개</string>
    <string name="version_info">버전 정보:</string>

    <!-- Champion List -->
    <string name="champion_list">챔피언 목록</string>

    <!-- User Info -->
    <string name="solo_rank">솔로 랭크</string>
    <string name="free_rank">자유 랭크</string>
    <string name="most_champion">모스트 챔피언 (TOP 5)</string>
    <string name="no_found">해당하는 소환사를 찾지 못했습니다.</string>

</resources>