<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/search_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="@string/input_searching_summoner_name"
                android:textSize="16sp"
                android:textColor="@color/DarkGray"
                android:background="@drawable/shape_solid_whitesmoke_stroke_1dp_black_square_radius_15dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rotation_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rotation_info"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/search_text_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rotation_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rotation_text_view"
                app:layout_constraintBottom_toTopOf="@id/solo_rank_text_view"/>

            <TextView
                android:id="@+id/solo_rank_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/solo_rank_ranking"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/rotation_recycler_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/solo_rank_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/solo_rank_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>