<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="androidx.core.content.ContextCompat"/>

        <variable
            name="viewModel"
            type="com.khs.riotapiproject.viewmodel.aac.UserInfoViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingHorizontal="8dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/profile_icon_image_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="90dp"
                app:imageName="@{String.valueOf(viewModel.userInfoLiveData.iconID)}"
                app:imageURL="@{@string/profile_icon_url_front + @string/lol_version + @string/profile_icon_url_back}"
                app:imageType="@{@string/png}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_level_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center"
                android:text="@{viewModel.levelFormat}"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/shape_solid_royal_blue_circle"
                app:layout_constraintTop_toBottomOf="@id/profile_icon_image_view"
                app:layout_constraintBottom_toBottomOf="@id/profile_icon_image_view"
                app:layout_constraintStart_toEndOf="@id/profile_icon_image_view"
                app:layout_constraintEnd_toEndOf="@id/profile_icon_image_view"/>

            <TextView
                android:id="@+id/profile_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="12dp"
                android:text="@{viewModel.userInfoLiveData.userName}"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/user_level_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/solo_rank_it_self_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/solo_rank"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/profile_name_text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/solo_rank_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/solo_rank_it_self_text">

                <ImageView
                    android:id="@+id/solo_rank_tier_image_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@{ContextCompat.getDrawable(context, viewModel.soloRankTierImage)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/solo_rank_tier_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.soloRankTierFormat}"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/solo_rank_win_ratio_text_view"
                    app:layout_constraintStart_toEndOf="@id/solo_rank_tier_image_view"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/solo_rank_win_ratio_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.soloRankWinRatio}"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/solo_rank_tier_text_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/solo_rank_tier_image_view"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/free_rank_it_self_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/free_rank"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/solo_rank_layout"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/free_rank_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/free_rank_it_self_text">

                <ImageView
                    android:id="@+id/free_rank_tier_image_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@{ContextCompat.getDrawable(context, viewModel.freeRankTierImage)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/free_rank_tier_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.freeRankTierFormat}"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/free_rank_win_ratio_text_view"
                    app:layout_constraintStart_toEndOf="@id/free_rank_tier_image_view"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/free_rank_win_ratio_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.freeRankWinRatio}"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/free_rank_tier_text_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/free_rank_tier_image_view"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/summoner_champion_mastery_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/most_champion"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/free_rank_layout"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/summoner_champion_mastery_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/summoner_champion_mastery_text_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>